5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1621_2919.log
== SUBMITION (2019-04-01 19:07:00) 
-- CODE:
#leitura
a1 =  float(input())
a2 =  float(input())
a3 = float(input())
a4 = float(input())

m = (a1 + a2 + a3 + a4)/4
print(a)
-- EXECUTION TIME:
0.153917
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2919/main.py", line 8, in <module>
    print(a)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:07:06) 
-- CODE:
#leitura
a1 =  float(input())
a2 =  float(input())
a3 = float(input())
a4 = float(input())

m = (a1 + a2 + a3 + a4)/4
print(m)
-- EXECUTION TIME:
0.147715
-- TEST CASE 1:
---- input:
1.78
1.56
1.62
1.74
---- correct output:
1.68
---- user output:
1.675
-- TEST CASE 2:
---- input:
1.52
1.53
1.51
1.8
---- correct output:
1.59
---- user output:
1.5899999999999999
-- TEST CASE 3:
---- input:
1.85
1.9
1.72
1.86
---- correct output:
1.83
---- user output:
1.8325
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:07:25) 
-- CODE:
#leitura
a1 =  float(input())
a2 =  float(input())
a3 = float(input())
a4 = float(input())

m = (a1 + a2 + a3 + a4)/4

print(round(m,1))
-- EXECUTION TIME:
0.1846
-- TEST CASE 1:
---- input:
1.78
1.56
1.62
1.74
---- correct output:
1.68
---- user output:
1.7
-- TEST CASE 2:
---- input:
1.52
1.53
1.51
1.8
---- correct output:
1.59
---- user output:
1.6
-- TEST CASE 3:
---- input:
1.85
1.9
1.72
1.86
---- correct output:
1.83
---- user output:
1.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:07:28) 
-- CODE:
#leitura
a1 =  float(input())
a2 =  float(input())
a3 = float(input())
a4 = float(input())

m = (a1 + a2 + a3 + a4)/4

print(round(m,1))
-- OUTPUT:
1.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:07:51) 
-- CODE:
#leitura
a1 =  float(input())
a2 =  float(input())
a3 = float(input())
a4 = float(input())

m = (a1 + a2 + a3 + a4)/4

print(round(m,1))
-- EXECUTION TIME:
0.223768
-- TEST CASE 1:
---- input:
1.78
1.56
1.62
1.74
---- correct output:
1.68
---- user output:
1.7
-- TEST CASE 2:
---- input:
1.52
1.53
1.51
1.8
---- correct output:
1.59
---- user output:
1.6
-- TEST CASE 3:
---- input:
1.85
1.9
1.72
1.86
---- correct output:
1.83
---- user output:
1.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:08:31) 
-- CODE:
#leitura
a1 =  float(input())
a2 =  float(input())
a3 = float(input())
a4 = float(input())

m = (a1 + a2 + a3 + a4)/4

print(round(m,1))
-- EXECUTION TIME:
0.15433
-- TEST CASE 1:
---- input:
1.78
1.56
1.62
1.74
---- correct output:
1.68
---- user output:
1.7
-- TEST CASE 2:
---- input:
1.52
1.53
1.51
1.8
---- correct output:
1.59
---- user output:
1.6
-- TEST CASE 3:
---- input:
1.85
1.9
1.72
1.86
---- correct output:
1.83
---- user output:
1.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:08:58) 
-- CODE:
#leitura
a1 =  float(input())
a2 =  float(input())
a3 = float(input())
a4 = float(input())

m = (a1 + a2 + a3 + a4)/4

print(round(m,1))
-- OUTPUT:
1.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:10:18) 
-- CODE:
#leitura
a1 =  float(input())
a2 =  float(input())
a3 = float(input())
a4 = float(input())

m = (a1 + a2 + a3 + a4)/4

print(round(m,2))
-- EXECUTION TIME:
0.166036
-- TEST CASE 1:
---- input:
1.78
1.56
1.62
1.74
---- correct output:
1.68
---- user output:
1.68
-- TEST CASE 2:
---- input:
1.52
1.53
1.51
1.8
---- correct output:
1.59
---- user output:
1.59
-- TEST CASE 3:
---- input:
1.85
1.9
1.72
1.86
---- correct output:
1.83
---- user output:
1.83
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:10:25) 
-- CODE:
#leitura
a1 =  float(input())
a2 =  float(input())
a3 = float(input())
a4 = float(input())

m = (a1 + a2 + a3 + a4)/4

print(round(m,2))
-- OUTPUT:
1.68
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
